feat: update swagger docs and change the endpoint routes
